resources/docker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starbucks-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: starbucks-api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: starbucks-api
    spec:
      containers:
      - name: starbucks-api
        image: rustypedrosa/starbucks-api:v2
        ports:
        - containerPort: 8080
