resources/docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starbucks-api-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    name: starbucks-api
